# doria

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md
crates/doriac/: Cargo.toml  build.rs
crates/doriac/src/: ast.rs  backend.rs  builtins.rs  class_layout.rs  codegen_cranelift.rs  codegen_llvm.rs  codegen_native.rs  codegen_php.rs  const_eval.rs  constructor_init.rs  control_flow.rs  dataflow.rs  diagnostics.rs  format_string.rs  hir.rs  lexer.rs  lib.rs  lowering.rs  lsp.rs  main.rs  mir.rs  mir_interpreter.rs  mir_lowering.rs  mir_validation.rs  narrowing.rs  native_abi.rs  native_smoke.rs  numeric.rs  ownership.rs  parser.rs  return_analysis.rs  runtime_artifact.rs  semantics.rs  source.rs  string_literal.rs  symbols.rs  types.rs
crates/doriac/tests/: cli_tests.rs  codegen_php_tests.rs  cranelift_mir_tests.rs  float_engine_tests.rs  integer_engine_tests.rs  lexer_tests.rs  lifecycle_method_tests.rs  llvm_mir_tests.rs  lsp_tests.rs  mir_tests.rs  mir_validation_tests.rs  native_backend_tests.rs  native_mir_negative_tests.rs  native_mir_parity_tests.rs  parser_tests.rs  semantic_ide_tests.rs  semantic_tests.rs  stage12_interpreter_tests.rs  stage12_semantic_tests.rs  stage13_mir_interpreter_tests.rs  stage13_semantic_tests.rs  stage14_mir_interpreter_tests.rs  stage14_semantic_tests.rs  stage16_runtime_string_tests.rs  stage17_io_tests.rs  stage18_tests.rs  stage19_tests.rs  stage20_tests.rs  stage20a_tests.rs  stage20b_tests.rs  stage21_tests.rs  stage22_tests.rs  stage23_tests.rs
crates/doriac/tests/fixtures/: native_parity_examples.txt  stage_11_native_parity_examples.txt
crates/doriac/tests/fixtures/diagnostics/: lifecycle_destruct_parameters.txt  lifecycle_object_construct_call.txt  lifecycle_object_destruct_call.txt  lifecycle_static_construct.txt  lifecycle_static_construct_call.txt  lifecycle_static_destruct.txt  lifecycle_this_construct_call.txt  lifecycle_writable_construct.txt  lifecycle_writable_destruct.txt  php_readline_fixit.txt  stage18_empty_interpolation.txt  stage18_invalid_displayable_signature.txt  stage18_literal_open_brace_fix.txt  stage18_malformed_interpolation.txt  stage18_non_displayable_class.txt  stage18_php_magic_method_guidance.txt  stage18_unterminated_interpolation.txt  stage20_duplicate_constant_static_property.txt  (+6 more)
(+368 files in other folders)
