[workspace]
members = ["crates/doria-rt", "crates/doriac"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/dorialang/doria"
version = "2026.3.1-canary"

[workspace.dependencies]
ryu = { version = "=1.0.20", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
