[package]
name = "doriac"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "doriac"

[lib]
name = "doriac"
path = "src/lib.rs"

[features]
default = []
llvm-backend = ["dep:inkwell"]

[dependencies]
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
cranelift-object = "0.133.1"
inkwell = { version = "=0.9.0", features = ["llvm18-1-prefer-dynamic"], optional = true }
serde_json = "1"

[[bin]]
name = "doriac"
path = "src/main.rs"

[[bin]]
name = "doria-lsp"
path = "src/bin/doria-lsp.rs"
